Add pyproject.toml, Fix setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,7 @@ author = Matheus Tura
 license = GPL-3.0
 description = A library for cryptocurrency ticker symbols manipulation
 url = https://github.com/zatura/symbols
-long_description = "Get the advantage of IDE hints for every symbol, don't worry about repeatedly consulting exchange/symbol-specific information.
-You can have all information in itself as an accessible object."
+long_description = "Get the advantage of IDE hints for every symbol, don't worry about repeatedly consulting exchange/symbol-specific information. You can have all information in itself as an accessible object."
 
 
 long_description_content_type = text/markdown
